init arize phoenix callback

--- a/llama-index-integrations/callbacks/llama-index-callbacks-arize-phoenix/examples/query_pipeline.ipynb
+++ b/llama-index-integrations/callbacks/llama-index-callbacks-arize-phoenix/examples/query_pipeline.ipynb
@@ -355,7 +355,7 @@
     "prompt_tmpl = PromptTemplate(prompt_str)\n",
     "# let's add some subsequent prompts for fun\n",
     "prompt_str2 = \"\"\"\\\n",
-    "Here's some text:\n",
+    "Here is some text:\n",
     "\n",
     "{text}\n",
     "\n",
