--- a/llama-index-packs/llama-index-packs-amazon-product-extraction/examples/product_extraction.ipynb
+++ b/llama-index-packs/llama-index-packs-amazon-product-extraction/examples/product_extraction.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.llama_pack import download_llama_pack\n",
+    "from llama_index.core.llama_pack import download_llama_pack\n",
     "\n",
     "AmazonProductExtractionPack = download_llama_pack(\n",
     "    \"AmazonProductExtractionPack\",\n",
