--- a/llama-index-packs/llama-index-packs-arize-phoenix-query-engine/examples/arize_phoenix_llama_pack.ipynb
+++ b/llama-index-packs/llama-index-packs-arize-phoenix-query-engine/examples/arize_phoenix_llama_pack.ipynb
@@ -45,8 +45,8 @@
     "import os\n",
     "\n",
     "from llama_hub.llama_packs.arize_phoenix_query_engine import ArizePhoenixQueryEnginePack\n",
-    "from llama_index.node_parser import SentenceSplitter\n",
-    "from llama_index.readers import SimpleWebPageReader\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from llama_index.core.readers import SimpleWebPageReader\n",
     "from tqdm.auto import tqdm"
    ]
   },
